--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>New Age - Start Bootstrap Theme</title>
+  <title>Voice Effects Bot</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -33,21 +33,18 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">VoiceEffectsBot</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
+        Меню
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+            <a class="nav-link js-scroll-trigger" href="#features">Возможности</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#features">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#pricing">Цены</a>
           </li>
         </ul>
       </div>
@@ -59,8 +56,8 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1>
-            <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
+            <h1 class="mb-5">Бот поможет изменить ваш голос и разыграть друзей</h1>
+            <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Начните использовать сейчас бесплатно!</a>
           </div>
         </div>
         <div class="col-lg-5 my-auto">
@@ -82,26 +79,11 @@
     </div>
   </header>
 
-  <section class="download bg-primary text-center" id="download">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 mx-auto">
-          <h2 class="section-heading">Discover what all the buzz is about!</h2>
-          <p>Our app is available on any mobile device! Download now to get started!</p>
-          <div class="badges">
-            <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-            <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading text-center">
-        <h2>Unlimited Features, Unlimited Fun</h2>
-        <p class="text-muted">Check out what you can do with this app theme!</p>
+        <h2>Безграничные возможности для веселья</h2>
+        <p class="text-muted">Посмотрите что вы можете делать с этим ботом</p>
         <hr>
       </div>
       <div class="row">
@@ -111,7 +93,7 @@
               <div class="device">
                 <div class="screen">
                   <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                  <img src="img/demo-screen-1.jpg" class="img-fluid" alt="">
+                  <img src="img/demo-screen-2.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="button">
                   <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -125,32 +107,32 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-screen-smartphone text-primary"></i>
-                  <h3>Device Mockups</h3>
-                  <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                  <i class="icon-diamond text-primary"></i>
+                  <h3>Розыгрыши</h3>
+                  <p class="text-muted">Измени свой голос на анонимный, бурундука или призрака и повесели друзей!</p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-camera text-primary"></i>
-                  <h3>Flexible Use</h3>
-                  <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                  <i class="icon-present text-primary"></i>
+                  <h3>Поздравления</h3>
+                  <p class="text-muted">Запиши классное поздравление и укрась его крутой фоновой музыкой!</p>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-present text-primary"></i>
-                  <h3>Free to Use</h3>
-                  <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                  <i class="icon-people text-primary"></i>
+                  <h3>Анонимный чат</h3>
+                  <p class="text-muted">Измени голос и общайся анонимно и безопасно!</p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
-                  <i class="icon-lock-open text-primary"></i>
-                  <h3>Open Source</h3>
-                  <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                  <i class="icon-star text-primary"></i>
+                  <h3>Узнаваемость</h3>
+                  <p class="text-muted">Добавь своему голосу запоминаемый эффект</p>
                 </div>
               </div>
             </div>
@@ -160,53 +142,62 @@
     </div>
   </section>
 
-  <section class="cta">
-    <div class="cta-content">
-      <div class="container">
-        <h2>Stop waiting.<br>Start building.</h2>
-        <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
-      </div>
-    </div>
-    <div class="overlay"></div>
-  </section>
-
-  <section class="contact bg-primary" id="contact">
+  <section class="contact bg-primary" id="pricing">
     <div class="container">
-      <h2>We
-        <i class="fas fa-heart"></i>
-        new friends!</h2>
-      <ul class="list-inline list-social">
-        <li class="list-inline-item social-twitter">
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-        </li>
-        <li class="list-inline-item social-facebook">
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-        </li>
-        <li class="list-inline-item social-google-plus">
-          <a href="#">
-            <i class="fab fa-google-plus-g"></i>
-          </a>
-        </li>
-      </ul>
+      <h2>Цены</h2>
+      <div class="row row-cols-1 row-cols-md-3 text-center">
+        <div class="col mb-4">
+          <div class="card">
+            <h4 class="card-header">Начальный</h4>
+            <div class="card-body">
+              <p>Бесплатно можно редактировать голосовые сообщения до 5-ти секунд, доступны все эффекты</p>
+              <!--<ul class="list-unstyled">-->
+                <!--<li class="list-item"><strong>Время:</strong> 5 сек</li>-->
+              <!--</ul>-->
+              <p class="text-primary display-4">Бесплатно</p>
+              <a href="https://t.me/VoiceEffectsBot?start=c-landing"><button class="btn btn-lg btn-outline-primary btn-block">Начать</button></a>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <h4 class="card-header">Базовый</h4>
+            <div class="card-body">
+              <p>Все тоже, что и в бесплатном, но 60 секунд сроком на месяц</p>
+              <!--<ul class="list-unstyled">-->
+                <!--<li class="list-item"><strong>Время:</strong> 60 сек</li>-->
+              <!--</ul>-->
+              <p class="text-primary display-4">300Р</p>
+              <button class="btn btn-lg btn-primary btn-block">Купить</button>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <h4 class="card-header">Премиум</h4>
+            <div class="card-body">
+              <p>Все тоже, что и в бесплатном, но 3 минуты + можно отключить подпись бота сроком на месяц</p>
+              <!--<ul class="list-unstyled">-->
+                <!--<li class="list-item"><strong>Время:</strong> 3 мин</li>-->
+              <!--</ul>-->
+              <p class="text-primary display-4">500р</p>
+              <button class="btn btn-lg btn-primary btn-block">Купить</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; Your Website 2019. All Rights Reserved.</p>
+      <p>&copy; MagicBots.org 2020. All Rights Reserved.</p>
       <ul class="list-inline">
         <li class="list-inline-item">
-          <a href="#">Privacy</a>
+          <a href="https://t.me/MagicBots">Telegram канал</a>
         </li>
         <li class="list-inline-item">
-          <a href="#">Terms</a>
-        </li>
-        <li class="list-inline-item">
-          <a href="#">FAQ</a>
+          <a href="https://t.me/MagicBotsRU">Поддержка</a>
         </li>
       </ul>
     </div>
