--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
             <h1 class="mb-5">Бот поможет изменить ваш голос и разыграть друзей</h1>
-            <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Начните использовать сейчас бесплатно!</a>
+            <a href="https://t.me/VoiceEffectsBot?start=c-lp" class="btn btn-outline btn-xl js-scroll-trigger">Начните использовать сейчас бесплатно!</a>
           </div>
         </div>
         <div class="col-lg-5 my-auto">
