add contacts block

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
           <a href="https://t.me/MagicBotsRU">Поддержка</a>
         </li>
       </ul>
+      <p>ИНН 772821910448 contact@magicbots.org</p>
     </div>
   </footer>
 
