--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
           <a href="https://t.me/MagicBotsRU">Поддержка</a>
         </li>
       </ul>
-      <p>ИНН 772821910448 contact@magicbots.org</p>
+      <p>contact@magicbots.org</p>
+      <p>ИНН 772821910448 Федоров Артем Викторович</p>
     </div>
   </footer>
 
